@@ -40,8 +40,8 @@ $target = $modx->getOption('target',$scriptProperties,1);
 $tagVar = $modx->getOption('tagVar',$scriptProperties,'tag');
 $tagKeyVar = $modx->getOption('tagKeyVar',$scriptProperties,'key');
 $limit = $modx->getOption('limit',$scriptProperties,10);
-$sortBy = $modx->getOption('sortBy',$scriptProperties,'count');
-$sortDir = $modx->getOption('sortDir',$scriptProperties,'ASC');
+$sortBy = strtolower($modx->getOption('sortBy',$scriptProperties,'count'));
+$sortDir = strtoupper($modx->getOption('sortDir',$scriptProperties,'ASC'));
 $cls = $modx->getOption('cls',$scriptProperties,'');
 $altCls = $modx->getOption('altCls',$scriptProperties,'');
 $firstCls = $modx->getOption('firstCls',$scriptProperties,'');
@@ -98,6 +98,8 @@ if (!empty($where)) {
 }
 if ($sortBy == 'publishedon') {
     $c->sortby('Resource.publishedon',$sortDir);
+} else if (in_array($sortBy,array('rand','random','rand()'))) {
+    $c->sortby('RAND()','');
 }
 $tags = $modx->getCollection('modTemplateVarResource',$c);
 
@@ -129,6 +131,7 @@ switch ($sortBy.'-'.$sortDir) {
     case 'tag-DESC': krsort($tagList); break;
     case 'count-DESC': asort($tagList); break;
     case 'count-ASC': default: arsort($tagList); break;
+    case 'rand-ASC': case 'random-ASC': case 'rand()-asc': $tagList = $tagLister->ashuffle($tagList); break;
 }
 
 /* iterate */
