@@ -2,6 +2,7 @@ Changelog for tagLister.
 
 tagLister 1.1.2
 ===============
+- [#18] Add ability to sortBy=`rand` to randomly sort tags in tagLister snippet
 - [#16] Add lastCls, condition if tag is equal tagList count.
 - [#16] Add element (value: getResources) to default properties
 - [#15] Add fix to allow for &tag property in getResourcesTag snippet
